# Yukatari

./: CMakeLists.txt  README.md  main.cpp
src/: Debug.h
src/core/: Application.cpp  Application.h  EventManager.cpp  EventManager.h  IEvent.h  IObserver.h  NetworkManager.cpp  NetworkManager.h  State.h  Timer.h
src/game/client/: ClientState.cpp  ClientState.h
src/game/client/events/: EventAttachPlayer.h  EventEntitiesLoad.h  EventWorldLoad.h
src/game/client/networking/: PacketInputUpdate.h
src/game/common/: Camera.cpp  Camera.h  InputInfo.h  World.cpp  World.h  WorldRenderer.cpp  WorldRenderer.h
src/game/common/events/: EventApplicationTerminate.h
src/game/common/networking/: PacketHeader.h  PacketPing.h
src/game/common/resources/: ResourceManager.cpp  ResourceManager.h  TextureName.h
src/game/common/world/: Entity.cpp  Entity.h  EntityType.h  IDynamic.h  IdGenerator.cpp  IdGenerator.h  MapInfo.h  Player.cpp  Player.h  Tile.h
src/game/server/: Client.h  ServerState.cpp  ServerState.h
src/game/server/events/: EventEntityTransformUpdate.h
src/game/server/networking/: PacketAttachPlayer.h  PacketEntitiesLoad.h  PacketEntityTransformUpdate.h  PacketWorldLoad.h
